QM10_BUILD.log
  File "/home/runner/work/materials-evidence-stack/materials-evidence-stack/qm10/build_qm10.py", line 382
    tests=f'''import unittest\nfrom analysis_code.qm10_analysis import *\nclass T(unittest.TestCase):\n def test_mass(self):self.assertTrue(4.50<mass_rom({{"Ti":97.6,"TiB2":2.4}},{{"Ti":4.506,"TiB2":4.52}})<4.52)\n def test_volume(self):self.assertAlmostEqual(volume_rom({{"Ti":87.12,"TiC":12.88}},{{"Ti":4.506,"TiC":4.93}}),{WANG_RHO!r},10)\n def test_specific(self):self.assertAlmostEqual(specific(1000,5),200)\n def test_pct(self):self.assertAlmostEqual(pct(110,100),10)\n def test_pareto(self):self.assertTrue(dominates(4.627,1147,4.630,1090))\n def test_not_robust(self):self.assertFalse(robust_density(4.627,.01,4.630,.01))\n def test_heavy_penalty(self):self.assertGreater({TI65_RHO-TI65_CF_RHO!r},0)\n def test_ductility_utility(self):\n  c={{"UTS":914,"YS":844,"E":110,"EL":10,"density":4.54}};t={{"UTS":1234,"YS":1160.6,"E":130.5,"EL":1.35,"density":{QIN_RHO!r}};self.assertLess(utility(c,t,{{"UTS":.25,"YS":.15,"E":.1,"EL":.4,"density":.1}}),0)\nif __name__=="__main__":unittest.main()\n'''
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       ^
SyntaxError: f-string: single '}' is not allowed
